# moltis

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  fly.toml  render.yaml
.do/: deploy.template.yaml
.github/workflows/: ci.yml  release.yml
crates/agents/: Cargo.toml
crates/agents/src/: lib.rs  model.rs  prompt.rs  runner.rs  tool_registry.rs
crates/auto-reply/: Cargo.toml
crates/browser/: Cargo.toml
crates/browser/src/: container.rs  types.rs
crates/canvas/: Cargo.toml
crates/channels/: Cargo.toml
crates/channels/src/: plugin.rs
crates/cli/: Cargo.toml
crates/cli/src/: browser_commands.rs  main.rs
crates/common/: Cargo.toml
crates/common/src/: hooks.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs  loader.rs  schema.rs  template.rs  validate.rs
crates/cron/: Cargo.toml
crates/gateway/: Cargo.toml
crates/gateway/src/: channel_events.rs  chat.rs  chat_error.rs  chat_ui.html  lib.rs  logs.rs  methods.rs  metrics_routes.rs  provider_setup.rs  server.rs  services.rs  state.rs  tools_routes.rs  voice.rs  voice_agent_tools.rs  ws.rs
crates/gateway/tests/: auth_middleware.rs  chat_ui.rs
crates/gateway/ui/: input.css
crates/mcp/: Cargo.toml
crates/media/: Cargo.toml
crates/memory/: Cargo.toml
crates/memory/src/: manager.rs
crates/metrics/: Cargo.toml
crates/metrics/src/: definitions.rs  lib.rs
crates/oauth/: Cargo.toml
crates/oauth/src/: defaults.rs  device_flow.rs  lib.rs  types.rs
crates/onboarding/: Cargo.toml
crates/onboarding/src/: service.rs
crates/plugins/: Cargo.toml
crates/protocol/: Cargo.toml
crates/routing/: Cargo.toml
crates/sessions/: Cargo.toml
crates/sessions/src/: store.rs
crates/skills/src/: discover.rs  types.rs
crates/telegram/src/: handlers.rs  outbound.rs
crates/tools/: Cargo.toml
docs/: voice.md
docs/src/: SUMMARY.md  security.md
plans/: 2026-02-14-rustls-migration-and-openssl-reduction.md
scripts/: local-validate-pr.sh  local-validate.sh  prepare-release.sh
(+61 files in other folders)
