[package]
edition.workspace = true
name              = "moltis-cron"
version.workspace = true

[dependencies]
anyhow        = { workspace = true }
moltis-agents = { workspace = true }
moltis-common = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
tokio         = { workspace = true }
tracing       = { workspace = true }
