[package]
edition.workspace = true
name              = "moltis-metrics"
version.workspace = true
description       = "Metrics collection and export for moltis"

[dependencies]
# Metrics facade (always available for no-op when disabled)
metrics = "0.24"

# Prometheus exporter (optional)
metrics-exporter-prometheus = { optional = true, version = "0.16" }

# For histogram buckets and utilities
once_cell = "1"

# Shared dependencies
anyhow    = { workspace = true }
serde     = { workspace = true }
serde_json = { workspace = true }
tokio     = { workspace = true }
tracing   = { workspace = true }

[features]
default    = []
prometheus = ["dep:metrics-exporter-prometheus"]

[dev-dependencies]
tokio = { features = ["rt-multi-thread", "macros"], workspace = true }

[lints]
workspace = true
