[package]
edition.workspace = true
name              = "moltis-onboarding"
version.workspace = true

[dependencies]
anyhow        = { workspace = true }
moltis-common = { workspace = true }
moltis-config = { workspace = true }
tokio         = { workspace = true }
tracing       = { workspace = true }
